...
    <string name="summary_by_type">По типам</string>
    <string name="summary_by_subject">По предметам</string>
    <string name="summary_by_teacher">По преподавателям</string>
    <string name="summary_rooms">Аудитории</string>
    <string name="summary_by_day">По дням</string>
    <string name="summary_by_room">По аудиториям</string>
    <string name="summary_rooms_empty">Аудитории не указаны</string>
    <string name="teachers_search_hint">Фамилия или предмет</string>
    <string name="teachers_only_mine">Только мои</string>
    <string name="teachers_found">Найдено %1$d из %2$d</string>
    <string name="teachers_back">Назад</string>
    <string name="parity_both">Обе</string>
    <string name="teacher_parity_both">Обе недели</string>
...
